<resources>
    <string name="app_name">MobiLize</string>
    <string name="logoMobiLize">Logo MobiLize</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="register">Registrarse</string>
    <string name="gotologin">Ir al inicio de sesión</string>
    <string name="gotoregister">¿No tienes una cuenta?</string>
    <string name="confirmationEmailText">No tienes una cuenta?</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="loginConfirmationButton">Iniciar sesión</string>
    <string name="masa_muscular">Ganar Músculo</string>
    <string name="adelgazar">Adelgazar</string>
    <string name="enforma">En Forma</string>
    <string name="planes">Planes disponibles:</string>
    <string name="misplanes">Mis Planes</string>
    <string name="disciplines">Selecciona las disciplinas que quieres al planning:</string>
    <string name="config">Configuración</string>
    <string name="dificultat">Dificultad</string>
    <string-array name="duracio">
        <item>1 semana</item>
        <item>15 dias</item>
        <item>1 mes</item>
        <item>2 meses</item>
        <item>3 meses</item>
    </string-array>
    <string name="enrere">Atrás</string>
    <string name="ok">OK</string>
    <string name="running">Running</string>
    <string name="ciclisme">Ciclismo</string>
    <string name="workout">Ejercicio</string>
    <string name="facil">Fácil</string>
    <string name="mitjana">Mediano</string>
    <string name="dificil">Difícil</string>
    <string name="planning">Planning</string>
    <string name="nom">Nombre:</string>
    <string name="descripcio">Descripción:</string>
    <string name="entrenamiento_libre">Entrenamiento libre</string>
    <string name="cycling">Ciclismo</string>
    <string name="seleccionar_modalidad">Seleccione una modalidad:</string>
    <string name="rutina">Rutina</string>
    <string name="libre">Libre</string>
    <string name="entrenamientos">Entrenamientos</string>
    <string name="mis_entrenamientos">Mis entrenamientos</string>
    <string name="nivellrutina">Escoje el nivel de tu rutina</string>
    <string name="continua">Continua</string>
    <string name="GeneroTV">Género</string>
    <string name="Fecha_NacimientoTV">Fecha nacimiento</string>
    <string name="Fecha_NacimientoHint">dd/mm/aaaa</string>
    <string name="PesoTV">Peso</string>
    <string name="AlturaTV">Altura</string>
    <string name="GuardarCambiosButton">Guardar Cambios</string>
    <string name="kg">Kg</string>
    <string name="cm">cm</string>
    <string name="rutinaEntrenamiento">Rutina de entrenamiento</string>
    <string name="escollirDificultat">Seleccione una dificultad</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="delete">Eliminar cuenta</string>
    <string name="idiom">Idioma</string>
    <string name="alerts">Notificaciones</string>
    <string name="information">Información</string>
    <string name="desc">desc</string>
    <string name="tit">tit</string>
    <string name="options">Configuración</string>
    <string name="confirmationDelete">"Está seguro de que quiere eliminar su cuenta? Se perderán todos sus datos."</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="catalan">Catalán</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="idiomChanged">El idioma se ha cambiado al Español</string>
    <string name="introduceValidEmail">Por favor, introduce un email válido</string>
    <string name="incorrectEmail">Email incorrecto</string>
    <string name="incorrectPassword">Contraseña incorrecta. Por favor, introduce una contraseña válida. Debe contener más de 6 carácteres alfanuméricos</string>
    <string name="confirmEmail">Confirma primero tu dirección de correo electrónico</string>
    <string name="errorEmail">Error en el correo electrónico o contraseña</string>
    <string name="event">Evento</string>
    <string name="plan">Plan</string>
    <string name="training">Entrenamiento</string>
    <string name="progress">Progreso</string>
    <string name="profile">Perfil</string>
    <string name="SendFriendReq">Enviar solicitud de amistad</string>
    <string name="CancelFriendReq">Cancelar solicitud</string>
    <string name="DeclineFriendReq">Denegar solicitud de amistad</string>
    <string name="AcceptFriendReq">Aceptar solicitud</string>
    <string name="Unfriend">Dejar de ser amigos</string>
    <string name="SendFriendReqMes">Se ha enviado la solicitud de amistad</string>
    <string name="CancelFriendReqMes">Se ha cancelado la solicitud</string>
    <string name="UnfriendMes"> y tu ya no soys amigos</string>
    <string name="NewFriendMes"> y tu ahora soys amigos</string>
    <string name="auth">Autentificando…</string>
    <string name="incorrectUsername">Usuario incorrecto</string>
    <string name="confirmation">Se ha enviado un correo de confirmación a tu cuenta de correo electrónico: </string>
    <string name="friendList">Lista de amigos</string>
    <string name="TitleEventTV">Título</string>
    <string name="DescripcionEventTV">Descripción:</string>
    <string name="DateEventTV">Fecha:</string>
    <string name="hourEventTV">Hora:</string>
    <string name="HourEvent_Hint">hh:mm a.m</string>
    <string name="SportEventTV">Deporte:</string>
    <string name="Max_partEventTV">Número máximo de participantes:</string>
    <string name="Min_partEventTV">Número mínimo de participantes:</string>
    <string name="CrearEventoButton">"  Crear evento  "</string>
    <string name="contact">Contacta con nosotros</string>
    <string name="resp">Descargo de responsabilidad</string>
    <string name="privacity">Política de Privacidad</string>
    <string name="accept">Aceptar</string>
    <string name="version">MobiLize versión: 1.0</string>
    <string name="cancel">Cancelar</string>
    <string name="erase">Borrar</string>
    <string name="respMessage">Toda la información proporcionada dentro de la aplicación es de carácter general y se supone que debe usarse solo con fines educativos / de entretenimiento. No se puede tomar información como consejo médico u otro consejo de salud. Usted acepta que el uso de esta información está bajo su propio riesgo y mantiene a MobiLize indemne de todas y cada una de las pérdidas, responsabilidades, lesiones o daños resultantes de cualquier reclamo.</string>
    <string name="privacityMessage">La presente Política de Privacidad establece los términos en que MobiLize usa y protege la información que es proporcionada por sus usuarios al momento de utilizar la aplicación. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.\n\n<b>Información que es recogida</b> \n\nNuestra aplicación podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.\n\n<b>Uso de la información recogida</b> \n\nNuestra aplicación emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.\n\nMobiLize está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.\n\n<b>Cookies</b> \n\nUna cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico de la aplicación.\n\nNuestra aplicación emplea las cookies para poder identificar las ventanas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento. Sin embargo las cookies ayudan a proporcionar un mejor servicio de la aplicación, estas no dan acceso a información de su móvil ni de usted, a menos de que usted así lo quiera y la proporcione directamente . Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio. También usted puede cambiar la configuración de su móbil para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.\n\n<b>Enlaces a Terceros</b> \n\nEsta aplicación puede contener enlaces a otros sitios que pueden ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra aplicación, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.\n\n<b>Control de su información personal</b> \n\nEn cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestra aplicación.\n\nEsta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.\n\nMobiLize se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</string>
    <string name="ImageEventError">Por favor, introduce una imagen que caracterize el evento</string>
    <string name="existingTitleEvent">Ya existe un evento con ese nombre. Por favor, introduce un título que identifique el evento.</string>
    <string name="incorrectTitleEvent">Por favor, introduce un título que identifique el evento</string>
    <string name="incorrectDescriptionEvent">Por favor, introduce una descripción que descriva el evento</string>
    <string name="emptyDateEvent">Por favor, introduce la fecha del evento que desea crear</string>
    <string name="incorrectDateEvent">No puede introducir un evento que ya haya concluido</string>
    <string name="incorrectMax_partEvent">Por favor, indique el número máximo de participantes del evento que desea crear</string>
    <string name="incorrectMin_partEvent">Por favor, indique el número mínimo de participantes del evento que desea crear</string>
    <string name="incorrectRest_Part_Event">El número mínimo de participantes no puede ser superior al máximo establecido</string>
    <string name="SuccesEventCreate">El evento se ha creado correctamente</string>
    <string name="informacio_de_la_rutina">Información</string>
    <string name="nom_de_la_rutina">Nombre</string>
    <string name="Modifica">Modifica</string>
    <string name="Elimina">Elimina</string>
    <string name="Empieza">Empieza</string>
</resources>